# SB10-Widget

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  main.qml  qml.qrc
android-sources/: AndroidManifest.xml
res/: Icons.odp
